# template-web

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  SDD_SKILL.md  compose.yml  pnpm-workspace.yaml
.agent/: prd.json  prompt.md  (+6 more)
server/: .env.example  Dockerfile  Dockerfile.dev  README.md  config.py  docker-entrypoint.sh  main.py  pyproject.toml
server/api/http/: __init__.py  app.py  router.py
server/contexts/: __init__.py
server/contexts/alerts/: __init__.py
server/contexts/alerts/application/: __init__.py  services.py
server/contexts/alerts/domain/: __init__.py  models.py
server/contexts/alerts/infrastructure/: __init__.py  repository.py
server/contexts/auth/: __init__.py
server/contexts/auth/application/: __init__.py  ports.py  services.py
server/contexts/auth/contracts/: __init__.py
server/contexts/auth/domain/: __init__.py  models.py
server/contexts/auth/infrastructure/: __init__.py  repository.py
server/contexts/catalog/application/: __init__.py  ports.py  services.py
server/contexts/health/: __init__.py
server/data/: README.md  bootstrap_loader.py
server/data/bootstrap/: alerts.json  auth_accounts.json  catalog_products.json  fulfillment_events.json  fulfillment_notes.json  fulfillment_tasks.json  inventory_levels.json  orders.json  shipping_shipments.json  support_faqs.json  users.json
server/shared/: __init__.py
server/shared/application/: __init__.py  health.py
server/shared/infrastructure/: __init__.py  runtime.py  security.py
server/tests/: test_health.py
server/tests/e2e/: test_domain_feature_flows.py
(+350 files in other folders)
